# learn_python_project

./: .gitignore  HW2.py  Lesson_2.py  README.md  book.json  extra_books.json  json_list.json  lesson2_1.py  lesson_2.py  library.json  library.py  list_books_and_journal.json  main.py  models.py  my_file.txt  pyproject.toml  requirements.txt  some_file.json  work1.py
HW/: README.md  library.json  main.py  pyproject.toml
Library_Management_System/: main.py
data/: items.json
examples/: class_cm.txt  constants.py  context_managers.py  decorators.py  func_cm.txt  generators.py  iterators.py  log.txt  oop.py  pydantics.py  solid.py  try_finally.txt
homework/lection2/: LIBRARY.json  task.py
homeworks/: hw_new_1.py  library.json  my_library.txt
hw-lesson2/: classes.py  hw-2.py
lib/: decorators.py  library.py  models.py  storage.py
library_management/: book.py  book_model.py  comics.py  context_manager.py  journal.py  library.py
project-name/: pyproject.toml
solution/: home_task.py  library.json
