[project]
name = "learn-python-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Ruslan Melnychuk", email = "rmelnyc@softserveinc.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic[email] (>=2.11.5,<3.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "controlsystem" }
]