[project]
name = "homework-03"
version = "0.1.0"
description = "homework 03 poetry"
authors = [{ name = "Zakatsiura", email = "zakatsiura@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.0.0",
    "logging>=0.4.9.6,<0.5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
